fix alignment issue

--- a/MakerTracker/ClientApp/src/app/home/home.component.scss
+++ b/MakerTracker/ClientApp/src/app/home/home.component.scss
@@ -47,6 +47,7 @@ header.masthead {
   background: #FFFFFF55;
   padding: 20px;
   border-radius: 10px;
+  text-align: left;
 
   mat-card {
     max-width: 25%;
